# json-to-schema

./: .gitignore  LICENSE  README.md  json_to_schema.py  pyproject.toml
.github/workflows/: publish.yml  tests.yml
json_to_schema/: __init__.py
src/json_to_schema/: __init__.py  cli.py  core.py
tests/: test_json_to_schema.py
tests/fixtures/: deep_nested_collections.expected_schema.json  deep_nested_collections.input.json  events_mixed_array.expected_schema.json  events_mixed_array.input.json  mixed_scalar_array.expected_schema.json  mixed_scalar_array.input.json  nullable_variants.expected_schema.json  nullable_variants.input.json  optional_keys_objects.expected_schema.json  optional_keys_objects.input.json  user_profile.expected_schema.json  user_profile.input.json
