[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "json-to-schema"
version = "1.0.0"
description = "A tool to infer JSON Schemas from JSON data."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "Isak Lindgren" }
]
keywords = [
  "json",
  "json-schema",
  "schema",
  "generator",
  "inference",
  "cli",
  "draft-2020-12",
  "schema-generator",
  "json-schema-inference",
]
urls = { Homepage = "https://github.com/isalin/json-to-schema", Repository = "https://github.com/isalin/json-to-schema", Issues = "https://github.com/isalin/json-to-schema/issues", Changelog = "https://github.com/isalin/json-to-schema/releases" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
]

[project.scripts]
json-to-schema = "json_to_schema:main"

[tool.setuptools]
py-modules = ["json_to_schema"]
